[gd_scene load_steps=12 format=2]

[ext_resource path="res://Models/WorkshopForge.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Materials/WorkshopForgeMat.tres" type="Material" id=2]
[ext_resource path="res://Fonts/Merienda-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/3DLabel.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Interactable/WorkshopForge.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 1, 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Label3D/Viewport")

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.9, 0.4, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.3, 1, 1.3 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2.2, 0.4, 0.25 )

[node name="WorkshopForge" type="StaticBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.742607, 0.669727, 0, -0.669727, 0.742607, 0, 2.299, 1.91 )

[node name="Forge" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = ExtResource( 2 )

[node name="PhysicalCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.75 )
shape = SubResource( 1 )

[node name="Label3D" type="Spatial" parent="."]
visible = false

[node name="Viewport" type="Viewport" parent="Label3D"]
size = Vector2( 209, 47 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Label3D/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Use Forge [F]"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="Label3D"]
transform = Transform( 0.35, 0, 0, 0, 0.35, 0, 0, 0, 1, 0, 1.19526, 1.09157 )
billboard = 1
texture = SubResource( 3 )

[node name="InteractCollider" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 57

[node name="CollisionShape" type="CollisionShape" parent="InteractCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.391222, 0.207783 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="InteractCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05029, -1.11315 )
shape = SubResource( 5 )

[node name="CollisionShape3" type="CollisionShape" parent="InteractCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.402635, -0.0531704 )
shape = SubResource( 6 )

[node name="InternalInventory" type="Spatial" parent="."]

[node name="Slot0" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.8, 0.9 )

[node name="Slot1" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.8, 0.9 )

[node name="Slot2" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.8, 0.348242 )

[node name="Slot3" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.8, 0.348242 )
